// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders patient care plan suggestion (concern) 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    Suggested concern
  </div>
  <div
    className={undefined}
  >
    <div
      className=""
    >
      Concern Title
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
        onClick={[Function]}
      />
      <div
        className={undefined}
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className=""
  >
    <div
      className={undefined}
    >
      Suggested:
    </div>
    <div
      className={undefined}
    >
      <span>
        Aug 16, 2017
      </span>
    </div>
  </div>
</div>
`;

exports[`renders patient care plan suggestion (goal) 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    Suggested goal
  </div>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      Goal Title
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
        onClick={[Function]}
      />
      <div
        className={undefined}
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="undefined"
  >
    <div
      className={undefined}
    >
      Suggested:
    </div>
    <div
      className={undefined}
    >
      <span>
        Aug 16, 2017
      </span>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className={undefined}
    >
      Task Title
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
        style={
          Object {
            "backgroundImage": "url(https://bit.ly/2weRwJm)",
          }
        }
      />
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          Due:
        </div>
        <div
          className={undefined}
        >
          <span>
            Jul 26, 2017
          </span>
        </div>
      </div>
      <div
        className={undefined}
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
